--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -9,6 +9,8 @@
     <div>
         {% for room in rooms %}
             <div>
+                <a href="{% url 'updateroom' room.id %}"> Edit</a>
+                <a href=""> Delete</a>
                 <span>@{{ room.host.username }}</span>
                 <h5>{{ room.id }}  -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
                 <small>{{ room.topic }}</small>            
