--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <a href="/">Home</a>
+    <form method="GET" action="{% url 'home' %}">
+        <input type="text" name="q" placeholder="Search rooms">
+    </form>
+    <a href="{% url 'login' %}">Login</a>
 </body>
 </html>
