--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -27,8 +27,10 @@
         <a href="{% url 'createroom' %}">Create Room</a>
         {% for room in rooms %}
         <div>
+            {% if request.user == room.host %}
             <a href="{% url 'updateroom' room.id %}"> Edit</a>
             <a href="{% url 'deleteroom' room.id %}"> Delete</a>
+            {% endif %}
             <span>@{{ room.host.username }}</span>
             <h5>{{ room.id }}  -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
             <small>{{ room.topic }}</small>            
