Register Form Added

--- a/home/templates/home/login_reg.html
+++ b/home/templates/home/login_reg.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+{% if page == "login" %}
 <div>
 
     <form method="POST">
@@ -13,10 +14,20 @@
         <input type="password" name="password",placeholder="Enter Password">
 
         <input type="submit" value="Login">
+        <p>Haven't registered yet</p>
+        <a href="{% url 'register' %}">Sign Up</a>
     </form>
-
 </div>
 
-
-
+{% else %}
+<div>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <p>Already Signed Up?</p>
+        <a href="{% url 'login' %}">Login</a>
+        <input type="submit" value="register">
+    </form>
+</div>
+{% endif %}
 {% endblock %}
