--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,41 +4,25 @@
 <style>
     .home-Container {
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
 <div class="home-Container">
     <div>
-        <h3>Browse Topic</h3>
-        <hr>
-        <div>
-            <a href="{% url 'home' %}">All</a>
-        </div>
-        {% for topic in Topics %}
-            <div>
-                <a href="{% url 'home' %}?q={{topic.name}}">{{ topic.name }}</a>
-            </div>
-        {% endfor %}
+        {% include "home/topics_component.html" %}
     </div>
-
     <div>
         <p>{{ count }} rooms Available </p>
         <a href="{% url 'createroom' %}">Create Room</a>
-        {% for room in rooms %}
+        {% include "home/feed_component.html" %}
+    </div>
+
+    <div>
         <div>
-            {% if request.user == room.host %}
-            <a href="{% url 'updateroom' room.id %}"> Edit</a>
-            <a href="{% url 'deleteroom' room.id %}"> Delete</a>
-            {% endif %}
-            <span>@{{ room.host.username }}</span>
-            <h5>{{ room.id }}  -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
-            <small>{{ room.topic }}</small>            
+            {% include "home/activity_component.html " %}
         </div>
-        <hr>
-        {% endfor %}
     </div>
 </div>
-
- <!-- Moved Create Room link outside of the home-Container div -->
+<!-- Moved Create Room link outside of the home-Container div -->
 {% endblock %}
