--- a/home/templates/home/feed_component.html
+++ b/home/templates/home/feed_component.html
@@ -4,8 +4,12 @@
     <a href="{% url 'updateroom' room.id %}"> Edit</a>
     <a href="{% url 'deleteroom' room.id %}"> Delete</a>
     {% endif %}
-    <a href="{% url 'userprofile' room.host.id %}">@{{ room.host.username }}</a>
-    <h5>{{ room.id }}  -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
+    {% if room.host %}
+        <a href="{% url 'userprofile' room.host.id %}">@{{ room.host.username }}</a>
+    {% else %}
+        No host
+    {% endif %}
+    <h5>{{ room.id }} -- <a href="{% url 'room' room.id %}">{{ room.name }}</a></h5>
     <small>{{ room.topic }}</small>            
 </div>
 <hr>
